--- a/.gitignore
+++ b/.gitignore
@@ -140,3 +140,31 @@ hs_err_pid*
 target/
 
 # End of https://www.gitignore.io/api/git,java,java-web,code-java,intellij+all
+
+
+############################################# Vue #############################################
+
+
+# Created by https://www.gitignore.io/api/vue,vuejs
+# Edit at https://www.gitignore.io/?templates=vue,vuejs
+
+### Vue ###
+# gitignore template for Vue.js projects
+#
+# Recommended template: Node.gitignore
+
+# TODO: where does this rule come from?
+docs/_book
+
+# TODO: where does this rule come from?
+test/
+
+### Vuejs ###
+# Recommended template: Node.gitignore
+
+node_modules/
+dist/
+npm-debug.log
+yarn-error.log
+
+# End of https://www.gitignore.io/api/vue,vuejs
