--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
+    "firebase": "^6.3.0",
     "moment": "^2.24.0",
     "vue": "^2.6.10",
+    "vue-js-modal": "^1.3.31",
     "vue-router": "^3.0.7",
     "vuetify": "^1.5.5",
     "vuex": "^3.1.1"
