--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "vue": "^2.6.10",
     "vue-js-modal": "^1.3.31",
     "vue-router": "^3.0.7",
+    "vue-trix": "^0.8.4",
     "vuetify": "^1.5.5",
     "vuex": "^3.1.1"
   },
