--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,12 +8,17 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.19",
+    "@fortawesome/free-solid-svg-icons": "^5.9.0",
+    "@fortawesome/vue-fontawesome": "^0.1.6",
+    "chart.js": "^2.8.0",
     "core-js": "^2.6.5",
     "firebase": "^6.3.0",
     "moment": "^2.24.0",
     "vue": "^2.6.10",
     "vue-js-modal": "^1.3.31",
     "vue-router": "^3.0.7",
+    "vue-sidebar-menu": "^3.12.1",
     "vue-trix": "^0.8.4",
     "vuetify": "^1.5.5",
     "vuex": "^3.1.1"
@@ -26,6 +31,8 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^7.1.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
     "vue-cli-plugin-axios": "0.0.4",
